[package]
name = "mybar-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
timer = "0.2.0"
x11 = "2.21.0"
alsa = "0.7.0"


[dependencies.xcb]
version = "1.5.0"

[dependencies.xcb-wm]
version = "0.4.0"
features = ["ewmh"]

[dependencies.cairo]
package = "cairo-rs"
version = "0.20.7"
features = ["xcb", "freetype", "v1_18"]

[dependencies.cairo-sys]
package = "cairo-sys-rs"
version = "0.20.7"
features = ["xcb"]


# [dependencies.gtk]
# version = "0.9.6"
# package = "gtk4"
# features = ["v4_12"]

